ticket:275 (cont.)   * Updated builders & runtime support components to use new Criteria2   * Added applyLimit() method to the !DBAdapter classes   * Replaced build.xml convert-props with copy-runtime-conf target   * Created new interfaces for !QueryColumn and !OrderByColumn with "concrete" and "custom" subclasses
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@384 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/build.xml
+++ b/generator/build.xml
@@ -124,8 +124,8 @@
  issue as far as maintenance is concerned.
 -->
 
-<target name="convert-props" depends="configure">
-	<phing phingfile="build-propel.xml" target="convert-props"/>
+<target name="copy-runtime-conf" depends="configure">
+	<phing phingfile="build-propel.xml" target="copy-runtime-conf"/>
 </target>
 
 <target name="create-db" depends="configure">
