--- a/generator/default.properties
+++ b/generator/default.properties
@@ -137,8 +137,6 @@ propel.omtar.dir = ${propel.output.dir}
 
 # propel.sqlfile
 
-propel.runtime.conf.file = runtime-conf.xml
-propel.runtime.phpconf.file = ${propel.project}-conf.php
 propel.default.schema.basename = schema
 
 # Can't use because of inconsistencies in where the files
@@ -154,6 +152,7 @@ propel.schema.xsl.file = ${propel.home}/resources/xsl/database.xsl
 #
 # -------------------------------------------------------------------
 
+propel.runtime.conf.includes = *-conf.*
 propel.schema.sql.includes = *schema.xml
 propel.schema.sql.excludes =
 propel.schema.doc.includes = *schema.xml
