--- a/generator/projects/bookstore/build.properties
+++ b/generator/projects/bookstore/build.properties
@@ -11,7 +11,7 @@
 # you cannot refer to any properties set therein.
 
 propel.project = bookstore
-propel.database = sqlite
+propel.database = pgsql
 propel.database.url = sqlite2:/tmp/bookstore.db
 
 # Note that if you do not wish to specify the database (e.g. if you
