#267,#268   * Backporting changes (largely changeset:372 but also later revisions to those changes) to replace Creole with PDO DBAL.   * Also applied changes (again largely [372]) to make the !MapBuilders load on-demand
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.3@444 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/projects/bookstore/build.properties
+++ b/generator/projects/bookstore/build.properties
@@ -11,8 +11,8 @@
 # you cannot refer to any properties set therein.
 
 propel.project = bookstore
-propel.database = pgsql 
-propel.database.url = sqlite://./test/bookstore.db
+propel.database = sqlite
+propel.database.url = sqlite2:/tmp/bookstore.db
 
 # Note that if you do not wish to specify the database (e.g. if you
 # are using multiple databses) you can use the @DB@ token which
