object model and config file builders add information about the generator version of Propel now. this allows you to easily keep track of which version was used to generate a project. also, the generator version is available from runtime config files through key 'generator_version' in the 'propel' sub-array. closes #305.
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.3@479 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -16,6 +16,8 @@
 #
 # -------------------------------------------------------------------
 
+propel.version = 1.3.0-dev
+
 propel.home = .
 
 propel.project =
