--- a/generator/projects/bookstore/build.properties
+++ b/generator/projects/bookstore/build.properties
@@ -1,22 +1,22 @@
 # $Id: build.properties,v 1.6 2004/10/09 02:34:59 hlellelid Exp $
-# 
+#
 # This is a project-specific build.properties file.  The properties
 # in this file override anything set in Propel's top-level build.properties
 # file when *this* project is being built.
 #
-# See top-level build.properties-sample for explanation of configuration 
+# See top-level build.properties-sample for explanation of configuration
 # options.
 #
-# Because this file is included before the top-level build.properties file, 
+# Because this file is included before the top-level build.properties file,
 # you cannot refer to any properties set therein.
 
 propel.project = bookstore
-propel.database = pgsql 
-propel.database.url = sqlite://./test/bookstore.db
+propel.database = sqlite
+propel.database.url = sqlite:///tmp/bookstore.db
 
 # Note that if you do not wish to specify the database (e.g. if you
 # are using multiple databses) you can use the @DB@ token which
-# will be replaced with a database at runtime. 
+# will be replaced with a database at runtime.
 # E.g.: propel.database.url = sqlite://localhost/./test/@DB@.db
 # This will work for the datadump and the insert-sql tasks.
 
