--- a/generator/default.properties
+++ b/generator/default.properties
@@ -211,6 +211,9 @@ propel.builder.nodepeer.class = propel.engine.builder.om.php5.PHP5NodePeerBuilde
 propel.builder.nodestub.class = propel.engine.builder.om.php5.PHP5ExtensionNodeBuilder
 propel.builder.nodepeerstub.class = propel.engine.builder.om.php5.PHP5ExtensionNodePeerBuilder
 
+propel.builder.nestedset.class = propel.engine.builder.om.php5.PHP5NestedSetBuilder
+propel.builder.nestedsetpeer.class = propel.engine.builder.om.php5.PHP5NestedSetPeerBuilder
+
 # SQL builders
 
 propel.builder.ddl.class = propel.engine.builder.sql.${propel.database}.${propel.database}DDLBuilder
