Set svn:keywords property uniformly to .php, .xml and .properties files
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@513 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/docs/user_guide/build.xml
+++ b/docs/user_guide/build.xml
@@ -27,7 +27,7 @@
 	## conversion
 	##
 	## @author  alex black, enigma@turingstudio.com
-	## @revision $Revision: 1.1 $
+	## @revision $Revision$
 	##==============================================	
 	-->
 	<target name="normalize_linebreaks"
