--- a/generator/projects/bookstore/build.properties
+++ b/generator/projects/bookstore/build.properties
@@ -13,6 +13,9 @@
 propel.project = bookstore
 propel.database = sqlite
 propel.database.url = sqlite2:/tmp/bookstore.db
+# For MySQL or Oracle, you also need to specify username & password 
+# propel.database.user = [db username]
+# propel.database.password = [db password]
 
 # Note that if you do not wish to specify the database (e.g. if you
 # are using multiple databses) you can use the @DB@ token which
