if these arent blank then when we try to connect with insert-sql to a database that doesnt require them and it isnt in the build.properties it sends the ${blah} for the username and password
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.3@554 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -47,6 +47,13 @@ propel.database.schema =
 propel.database.encoding =
 propel.database.manualCreation = false
 
+# if these arent blank then when we try to connect with insert-sql to a database
+# that doesnt require them and it isnt in the build.properties it sends
+# the ${blah} for the username and password
+propel.database.user =
+propel.database.password =
+
+
 # -------------------------------------------------------------------
 #
 #  C R E O L E  TO  X M L  S E T T I N G S
