Fixes #306 - Create PDO PropelDataDumpTask Fixes #346 - Add default build properties and documenation for Creole reverse engineering
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.3@568 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -40,7 +40,6 @@ propel.database.url =
 propel.database.buildUrl = ${propel.database.url}
 propel.database.createUrl = ${propel.database.buildUrl}
 
-# by default leave the databaseDriver blank, so that bundled driver is used by Creole
 propel.database.driver =
 
 propel.database.schema =
@@ -53,6 +52,12 @@ propel.database.manualCreation = false
 propel.database.user =
 propel.database.password =
 
+# Creole database settings for reverse engineering applications
+# -------------------------------------------------------------
+
+# by default leave the databaseDriver blank, so that bundled driver is used by Creole
+propel.database.creole.driver =
+propel.database.creole.url =
 
 # -------------------------------------------------------------------
 #
