--- a/generator/projects/nestedsettest/build.properties
+++ b/generator/projects/nestedsettest/build.properties
@@ -4,26 +4,37 @@
 # in this file override anything set in Propel's top-level build.properties
 # file when *this* project is being built.
 #
-# See top-level build.properties-sample for explanation of configuration 
+# See top-level build.properties-sample for explanation of configuration
 # options.
 #
-# Because this file is included before the top-level build.properties file, 
+# Because this file is included before the top-level build.properties file,
 # you cannot refer to any properties set therein.
 
-propel.targetPackage = nestedsettest
-propel.project = nestedsettest
-
+propel.project = nestedset
 propel.database = sqlite
-propel.database.url = sqlite://localhost/./test/nestedsettest.db
+propel.database.url = sqlite://localhost/./test/nestedset.db
+# For MySQL or Oracle, you also need to specify username & password 
+# propel.database.user = [db username]
+# propel.database.password = [db password]
 
-#propel.database = mysql
-#propel.database.url = mysql://localhost/test
+# Note that if you do not wish to specify the database (e.g. if you
+# are using multiple databses) you can use the @DB@ token which
+# will be replaced with a database at runtime.
+# E.g.: propel.database.url = sqlite://localhost/./test/@DB@.db
+# This will work for the datadump and the insert-sql tasks.
 
-#propel.database = codebase
-#propel.database.url = odbc://localhost/Driver=CodeBaseOdbcStand;DBQ=test;?adapter=CodeBase
+# propel.database.createUrl = (doesn't aply for SQLite, since db is auto-created)
+
+propel.targetPackage = nestedset
+
+# The unit tests need to test this stuff
+propel.addGenericAccessors = true
+propel.addGenericMutators = true
 
 propel.home = .
 propel.output.dir = ${propel.home}/projects/${propel.project}/build
 propel.schema.dir = ${propel.home}/projects/${propel.project}
 propel.conf.dir = ${propel.home}/projects/${propel.project}
 
+# Use the new PHP 5.2 DateTime class
+propel.useDateTimeClass = true
