* Fixes #501, #410, #456 (maybe others) related to invalid date/time value storage (+ unit tests)  * Fix the storage of date/time values in the objects so that they are stored in the correct format.  * Fix some phpdoc related to the fluent API changes introduced by heltem  * Fixes #505 - Changed builder to use  * Fixes #506 - Changed default useDateTimeClass property to TRUE
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.3@781 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -24,11 +24,13 @@ propel.project =
 propel.database =
 propel.targetPackage = ${propel.project}
 propel.runOnlyOnSchemaChange = false
+
+# Default behavior settings
+#
 propel.targetPlatform = php5
-
 propel.packageObjectModel = false
-
 propel.schema.validate = true
+propel.useDateTimeClass = true
 
 # -------------------------------------------------------------------
 #
