--- a/generator/projects/bookstore/build.properties
+++ b/generator/projects/bookstore/build.properties
@@ -11,8 +11,8 @@
 # you cannot refer to any properties set therein.
 
 propel.project = bookstore
-propel.database = mysql
-propel.database.url = mysql:host=localhost;dbname=test
+propel.database = pgsql
+propel.database.url = pgsql:dbname=bookstore user=postgres
 # For MySQL or Oracle, you also need to specify username & password 
 # propel.database.user = [db username]
 # propel.database.password = [db password]
