Refs #511 - Merged Complex & Basic builders into a single class.
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.3@802 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -82,7 +82,6 @@ propel.addGenericMutators = false
 propel.addSaveMethod = true
 propel.addTimeStamp = true
 propel.basePrefix = Base
-propel.complexObjectModel = true
 propel.saveException = PropelException
 propel.emulateForeignKeyConstraints = false
 
@@ -209,8 +208,8 @@ propel.sql.mapper.to = *.sql
 # -------------------------------------------------------------------
 
 # Object Model builders
-propel.builder.peer.class = propel.engine.builder.om.php5.PHP5ComplexPeerBuilder
-propel.builder.object.class = propel.engine.builder.om.php5.PHP5ComplexObjectBuilder
+propel.builder.peer.class = propel.engine.builder.om.php5.PHP5PeerBuilder
+propel.builder.object.class = propel.engine.builder.om.php5.PHP5ObjectBuilder
 propel.builder.objectstub.class = propel.engine.builder.om.php5.PHP5ExtensionObjectBuilder
 propel.builder.peerstub.class = propel.engine.builder.om.php5.PHP5ExtensionPeerBuilder
 
