Cleanup:  * Trim right blank  * Replace left spaces by tabs  * Replace CRLF by LF  * Add space after some PHP keywords (if, while) and before open parenthesis  * Respect the 11 character gap between an @ and the value http://propel.phpdb.org/trac/wiki/Development/Guidelines/CodingStandards
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.3@816 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/projects/bookstore/build.properties
+++ b/generator/projects/bookstore/build.properties
@@ -23,7 +23,7 @@ propel.database.url = pgsql:dbname=bookstore user=postgres
 # E.g.: propel.database.url = sqlite://localhost/./test/@DB@.db
 # This will work for the datadump and the insert-sql tasks.
 
-# propel.database.createUrl = (doesn't aply for SQLite, since db is auto-created)
+# propel.database.createUrl = (doesn't apply for SQLite, since db is auto-created)
 
 propel.targetPackage = bookstore
 
