Refs #364 - Adding a plural form generator class.
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.3@820 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -227,6 +227,8 @@ propel.builder.nodepeerstub.class = propel.engine.builder.om.php5.PHP5ExtensionN
 propel.builder.nestedset.class = propel.engine.builder.om.php5.PHP5NestedSetBuilder
 propel.builder.nestedsetpeer.class = propel.engine.builder.om.php5.PHP5NestedSetPeerBuilder
 
+propel.builder.pluralizer.class = propel.engine.builder.util.DefaultEnglishPluralizer
+
 # SQL builders
 
 propel.builder.ddl.class = propel.engine.builder.sql.${propel.database}.${propel.database}DDLBuilder
