Fixes #526 - Default propel.addTimestamp to false and also perform a check for this property in the convert conf task
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.3@832 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -80,7 +80,7 @@ propel.addValidators = none
 propel.addGenericAccessors = false
 propel.addGenericMutators = false
 propel.addSaveMethod = true
-propel.addTimeStamp = true
+propel.addTimeStamp = false
 propel.basePrefix = Base
 propel.saveException = PropelException
 propel.emulateForeignKeyConstraints = false
