Refs #537 - Break out the classmap into its own configuration file, assumed in same dir as runtime conf output (php) file.
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.3@866 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -153,6 +153,7 @@ propel.omtar.dir = ${propel.output.dir}
 
 propel.runtime.conf.file = runtime-conf.xml
 propel.runtime.phpconf.file = ${propel.project}-conf.php
+propel.runtime.phpconf-classmap.file = ${propel.project}-classmap.php
 propel.default.schema.basename = schema
 
 # Can't use because of inconsistencies in where the files
