--- a/generator/projects/bookstore/build.properties
+++ b/generator/projects/bookstore/build.properties
@@ -13,6 +13,8 @@
 propel.project = bookstore
 propel.database = pgsql 
 propel.database.url = pgsql:dbname=bookstore user=postgres
+propel.disableIdentifierQuoting=true
+
 # For MySQL or Oracle, you also need to specify username & password 
 # propel.database.user = [db username]
 # propel.database.password = [db password]
