Refs #568 - Refactoring the builder/task relationships; pgsql reverse engineering tool is now running without error (but probably not fully working yet).
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.3@949 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -238,3 +238,7 @@ propel.builder.datasql.class = propel.engine.builder.sql.${propel.database}.${pr
 # Platform classes
 
 propel.platform.class = propel.engine.platform.${propel.database}Platform
+
+# Schema Parser (reverse-engineering) classes
+
+propel.reverse.parser.class = propel.engine.database.reverse.${propel.database}.${propel.database}SchemaParser
