Refs #573 - Added vendor-specific info support to the reverse task and generally refactored how vendor-specific info is stored in the model.
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.3@965 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -68,7 +68,7 @@ propel.database.creole.url =
 # -------------------------------------------------------------------
 
 propel.samePhpName = false
-propel.addVendorInfo = true
+propel.addVendorInfo = false
 propel.addValidators = none
 
 # -------------------------------------------------------------------
