Refs #588 -- Applying Felix's patch for the new JOIN behavior parameter in the doSelectJoin*() methods and build-time option to change the default.
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.3@985 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -31,6 +31,10 @@ propel.targetPlatform = php5
 propel.packageObjectModel = false
 propel.schema.validate = true
 propel.useDateTimeClass = true
+# controls what type of joins will be used in the doSelectJoin*() peer methods, 
+# if set to true, LEFT JOINS will be used, INNER JOINS otherwise
+# see ticket #491, #588
+propel.useLeftJoinsInDoJoinMethods = true
 
 # -------------------------------------------------------------------
 #
