--- a/generator/projects/bookstore/build.properties
+++ b/generator/projects/bookstore/build.properties
@@ -12,12 +12,12 @@
 
 propel.project = bookstore
 propel.database = mysql 
-propel.database.url = mysql:dbname=test
+propel.database.url = mysql:dbname=bookstore
 propel.disableIdentifierQuoting=true
 
 # For MySQL or Oracle, you also need to specify username & password 
-# propel.database.user = [db username]
-# propel.database.password = [db password]
+propel.database.user = bookstore
+propel.database.password = wTCj32PHEpemrbK9
 
 # Note that if you do not wish to specify the database (e.g. if you
 # are using multiple databses) you can use the @DB@ token which
