--- a/generator/default.properties
+++ b/generator/default.properties
@@ -31,6 +31,8 @@ propel.targetPlatform = php5
 propel.packageObjectModel = false
 propel.schema.validate = true
 propel.useDateTimeClass = true
+propel.dateTimeClass = DateTime
+
 # controls what type of joins will be used in the doSelectJoin*() peer methods, 
 # if set to true, LEFT JOINS will be used, INNER JOINS otherwise
 # see ticket #491, #588
