--- a/generator/projects/bookstore/build.properties
+++ b/generator/projects/bookstore/build.properties
@@ -13,6 +13,7 @@
 propel.project = bookstore
 propel.database = mysql 
 propel.database.url = mysql:dbname=test
+propel.mysqlTableType = InnoDB
 propel.disableIdentifierQuoting=true
 
 # For MySQL or Oracle, you also need to specify username & password 
