Refs #683: Added support for PHP 5.3 namespaces
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@1082 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -248,3 +248,16 @@ propel.platform.class = propel.engine.platform.${propel.database}Platform
 # Schema Parser (reverse-engineering) classes
 
 propel.reverse.parser.class = propel.engine.database.reverse.${propel.database}.${propel.database}SchemaParser
+
+# -------------------------------------------------------------------
+#
+#  N A M E S P A C E    S E T T I N G S
+#
+# -------------------------------------------------------------------
+
+propel.namespace.enabled = true
+propel.namespace.base = ${propel.project}
+propel.namespace.om = ${propel.namespace.base}::Model
+propel.namespace.peer = ${propel.namespace.base}::Peer
+propel.namespace.map = ${propel.project}::Map
+propel.namespace.nest = ${propel.namespace.om}
