Updates to use new namespace separator
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@1090 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -256,8 +256,8 @@ propel.reverse.parser.class = propel.engine.database.reverse.${propel.database}.
 # -------------------------------------------------------------------
 
 propel.namespace.enabled = true
-propel.namespace.base = ${propel.project}
-propel.namespace.om = ${propel.namespace.base}::Model
-propel.namespace.peer = ${propel.namespace.base}::Peer
-propel.namespace.map = ${propel.project}::Map
+propel.namespace.base = \${propel.project}
+propel.namespace.om = ${propel.namespace.base}\Model
+propel.namespace.peer = ${propel.namespace.base}\Peer
+propel.namespace.map = \${propel.project}\Map
 propel.namespace.nest = ${propel.namespace.om}
