[1.4] Replace MapBuilders by classes inheriting TableMap (refs #762)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.4@1168 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -222,7 +222,7 @@ propel.builder.peerstub.class = propel.engine.builder.om.php5.PHP5ExtensionPeerB
 
 propel.builder.objectmultiextend.class = propel.engine.builder.om.php5.PHP5MultiExtendObjectBuilder
 
-propel.builder.mapbuilder.class = propel.engine.builder.om.php5.PHP5MapBuilderBuilder
+propel.builder.tablemap.class = propel.engine.builder.om.php5.PHP5TableMapBuilder
 
 propel.builder.interface.class = propel.engine.builder.om.php5.PHP5InterfaceBuilder
 
