[1.4] Added a way to define behavior classes by way of build.properties (refs #768)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.4@1184 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -248,3 +248,11 @@ propel.platform.class = propel.engine.platform.${propel.database}Platform
 # Schema Parser (reverse-engineering) classes
 
 propel.reverse.parser.class = propel.engine.database.reverse.${propel.database}.${propel.database}SchemaParser
+
+# -------------------------------------------------------------------
+#
+#  B E H A V I O R   S E T T I N G S
+#
+# -------------------------------------------------------------------
+
+propel.behavior.timestampable.class = propel.engine.behavior.timestampable.TimestampableBehavior
