[1.4] Completed the behavior implementation (refs #768)  * Added more hooks in object builder  * Added hooks in peer builder  * Unit tested everything  * Documented the feature  * Added a metion of the feature in WHATS_NEW
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.4@1189 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/test/fixtures/bookstore/build.properties
+++ b/test/fixtures/bookstore/build.properties
@@ -36,3 +36,6 @@ propel.addGenericMutators = true
 
 # Use the new PHP 5.2 DateTime class
 propel.useDateTimeClass = true
+
+# We need to test behavior hooks
+propel.behavior.test_all_hooks.class = ../test.tools.helpers.bookstore.behavior.Testallhooksbehavior
