[1.4] Introducing database behaviors (refs #768)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.4@1190 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/test/fixtures/bookstore/build.properties
+++ b/test/fixtures/bookstore/build.properties
@@ -39,3 +39,4 @@ propel.useDateTimeClass = true
 
 # We need to test behavior hooks
 propel.behavior.test_all_hooks.class = ../test.tools.helpers.bookstore.behavior.Testallhooksbehavior
+propel.behavior.do_nothing.class = ../test.tools.helpers.bookstore.behavior.DonothingBehavior
