--- a/generator/default.properties
+++ b/generator/default.properties
@@ -87,6 +87,7 @@ propel.addGenericAccessors = false
 propel.addGenericMutators = false
 propel.addSaveMethod = true
 propel.addTimeStamp = false
+propel.addValidateMethod = true
 propel.basePrefix = Base
 propel.saveException = PropelException
 propel.emulateForeignKeyConstraints = false
