[1.4] Forgot one line in previous commit (refs #750)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.4@1201 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -88,6 +88,7 @@ propel.addGenericMutators = false
 propel.addSaveMethod = true
 propel.addTimeStamp = false
 propel.addValidateMethod = true
+propel.addHooks = true
 propel.basePrefix = Base
 propel.saveException = PropelException
 propel.emulateForeignKeyConstraints = false
