--- a/generator/default.properties
+++ b/generator/default.properties
@@ -257,4 +257,5 @@ propel.reverse.parser.class = propel.engine.database.reverse.${propel.database}.
 #
 # -------------------------------------------------------------------
 
-propel.behavior.timestampable.class = propel.engine.behavior.timestampable.TimestampableBehavior
+propel.behavior.timestampable.class = propel.engine.behavior.TimestampableBehavior
+propel.behavior.alternative_coding_standards.class = propel.engine.behavior.AlternativeCodingStandardsBehavior
