--- a/generator/default.properties
+++ b/generator/default.properties
@@ -259,3 +259,4 @@ propel.reverse.parser.class = propel.engine.database.reverse.${propel.database}.
 
 propel.behavior.timestampable.class = propel.engine.behavior.TimestampableBehavior
 propel.behavior.alternative_coding_standards.class = propel.engine.behavior.AlternativeCodingStandardsBehavior
+propel.behavior.soft_delete.class = propel.engine.behavior.SoftDeleteBehavior
