--- a/generator/default.properties
+++ b/generator/default.properties
@@ -16,7 +16,7 @@
 #
 # -------------------------------------------------------------------
 
-propel.version = 1.3.0-dev
+propel.version = 1.4.0-dev
 
 propel.home = .
 
@@ -88,6 +88,7 @@ propel.addGenericMutators = false
 propel.addSaveMethod = true
 propel.addTimeStamp = false
 propel.addValidateMethod = true
+propel.addIncludes = true
 propel.addHooks = true
 propel.basePrefix = Base
 propel.saveException = PropelException
