[1.4] Fixed pseudo-test packages (refs #756)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.4@1260 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/test/fixtures/nestedset/build.properties
+++ b/test/fixtures/nestedset/build.properties
@@ -12,7 +12,7 @@
 
 propel.project = nestedset
 propel.database = sqlite
-propel.database.url = sqlite://localhost/./test/nestedset.db
+propel.database.url = sqlite:/var/tmp/nestedset.db
 # For MySQL or Oracle, you also need to specify username & password 
 # propel.database.user = [db username]
 # propel.database.password = [db password]
@@ -30,11 +30,6 @@ propel.targetPackage = nestedset
 # The unit tests need to test this stuff
 propel.addGenericAccessors = true
 propel.addGenericMutators = true
-
-propel.home = .
-propel.output.dir = ${propel.home}/projects/${propel.project}/build
-propel.schema.dir = ${propel.home}/projects/${propel.project}
-propel.conf.dir = ${propel.home}/projects/${propel.project}
 
 # Use the new PHP 5.2 DateTime class
 propel.useDateTimeClass = true
