--- a/test/fixtures/treetest/build.properties
+++ b/test/fixtures/treetest/build.properties
@@ -14,7 +14,7 @@ propel.targetPackage = treetest
 propel.project = treetest
 
 propel.database = sqlite
-propel.database.url = sqlite://localhost/./test/treetest.db
+propel.database.url = sqlite:/var/tmp/treetest.db
 
 #propel.database = mysql
 #propel.database.url = mysql://localhost/test
@@ -22,8 +22,5 @@ propel.database.url = sqlite://localhost/./test/treetest.db
 #propel.database = codebase
 #propel.database.url = odbc://localhost/Driver=CodeBaseOdbcStand;DBQ=test;?adapter=CodeBase
 
-propel.home = .
-propel.output.dir = ${propel.home}/projects/${propel.project}/build
-propel.schema.dir = ${propel.home}/projects/${propel.project}
-propel.conf.dir = ${propel.home}/projects/${propel.project}
+
 
