[1.5] Initialized nested_set behavior (refs #778)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.5@1279 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -262,3 +262,4 @@ propel.behavior.timestampable.class = propel.engine.behavior.TimestampableBehavi
 propel.behavior.alternative_coding_standards.class = propel.engine.behavior.AlternativeCodingStandardsBehavior
 propel.behavior.soft_delete.class = propel.engine.behavior.SoftDeleteBehavior
 propel.behavior.auto_add_pk.class = propel.engine.behavior.AutoAddPkBehavior
+propel.behavior.nested_set.class = propel.engine.behavior.nestedset.NestedSetBehavior
