--- a/generator/default.properties
+++ b/generator/default.properties
@@ -29,7 +29,7 @@ propel.runOnlyOnSchemaChange = false
 #
 propel.targetPlatform = php5
 propel.packageObjectModel = false
-propel.schema.validate = true
+propel.schema.validate = false
 propel.useDateTimeClass = true
 propel.dateTimeClass = DateTime
 
