[1.4] partly reverting r1295 but made tests pass whithout XSLT transformation anyway
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.4@1296 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -29,7 +29,7 @@ propel.runOnlyOnSchemaChange = false
 #
 propel.targetPlatform = php5
 propel.packageObjectModel = false
-propel.schema.validate = false
+propel.schema.validate = true
 propel.useDateTimeClass = true
 propel.dateTimeClass = DateTime
 
