[1.5] Added generated query classes, and PropelQuery factory to ease their use (refs #780)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.5@1352 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -210,6 +210,8 @@ propel.builder.peerstub.class = builder.om.PHP5ExtensionPeerBuilder
 propel.builder.objectmultiextend.class = builder.om.PHP5MultiExtendObjectBuilder
 
 propel.builder.tablemap.class = builder.om.PHP5TableMapBuilder
+propel.builder.query.class = builder.om.QueryBuilder
+propel.builder.querystub.class = builder.om.ExtensionQueryBuilder
 
 propel.builder.interface.class = builder.om.PHP5InterfaceBuilder
 
