[1.5] Added sortable behavior (patch from garak) (refs #820)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.5@1355 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -249,3 +249,4 @@ propel.behavior.alternative_coding_standards.class = behavior.AlternativeCodingS
 propel.behavior.soft_delete.class = behavior.SoftDeleteBehavior
 propel.behavior.auto_add_pk.class = behavior.AutoAddPkBehavior
 propel.behavior.nested_set.class = behavior.nestedset.NestedSetBehavior
+propel.behavior.sortable.class = behavior.SortableBehavior
