--- a/generator/default.properties
+++ b/generator/default.properties
@@ -29,9 +29,11 @@ propel.runOnlyOnSchemaChange = false
 #
 propel.targetPlatform = php5
 propel.packageObjectModel = false
-propel.schema.validate = true
 propel.useDateTimeClass = true
 propel.dateTimeClass = DateTime
+
+propel.schema.validate = true
+propel.schema.transform  = false
 
 # controls what type of joins will be used in the doSelectJoin*() peer methods, 
 # if set to true, LEFT JOINS will be used, INNER JOINS otherwise
