[1.5] added sluggable behavior (refs #821)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.5@1467 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -252,3 +252,4 @@ propel.behavior.soft_delete.class = behavior.SoftDeleteBehavior
 propel.behavior.auto_add_pk.class = behavior.AutoAddPkBehavior
 propel.behavior.nested_set.class = behavior.nestedset.NestedSetBehavior
 propel.behavior.sortable.class = behavior.sortable.SortableBehavior
+propel.behavior.sluggable.class = behavior.sluggable.SluggableBehavior
