[1.5] Initial commit for the concrete inheritance code (refs #837)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.5@1489 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -253,3 +253,4 @@ propel.behavior.auto_add_pk.class = behavior.AutoAddPkBehavior
 propel.behavior.nested_set.class = behavior.nestedset.NestedSetBehavior
 propel.behavior.sortable.class = behavior.sortable.SortableBehavior
 propel.behavior.sluggable.class = behavior.sluggable.SluggableBehavior
+propel.behavior.concrete_inheritance.class = behavior.concrete_inheritance.ConcreteInheritanceBehavior
