[1.5] Made Propel compatible with Phing 2.4.0
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.5@1506 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/docs/build.xml
+++ b/docs/build.xml
@@ -1,4 +1,4 @@
-<project name="propel-docs" default="phpdoc" basedir=".">
+<project name="propel-docs" default="phpdoc">
 
 	<property name="runtime.dir" value="../runtime" />
 	<property name="generator.dir" value="../generator" />
