[1.5] Completed runtime autoloading (closes #850)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.5@1545 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -90,7 +90,7 @@ propel.addGenericMutators = false
 propel.addSaveMethod = true
 propel.addTimeStamp = false
 propel.addValidateMethod = true
-propel.addIncludes = true
+propel.addIncludes = false
 propel.addHooks = true
 propel.basePrefix = Base
 propel.saveException = PropelException
