[1.5] Introducing the query_cache behavior
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.5@1591 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -254,3 +254,4 @@ propel.behavior.nested_set.class = behavior.nestedset.NestedSetBehavior
 propel.behavior.sortable.class = behavior.sortable.SortableBehavior
 propel.behavior.sluggable.class = behavior.sluggable.SluggableBehavior
 propel.behavior.concrete_inheritance.class = behavior.concrete_inheritance.ConcreteInheritanceBehavior
+propel.behavior.query_cache.class = behavior.query_cache.QueryCacheBehavior
