[1.5] reverted r1596 as it creates wrong query logs (refs #872)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.5@1599 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/test/fixtures/bookstore/build.properties
+++ b/test/fixtures/bookstore/build.properties
@@ -17,8 +17,8 @@ propel.mysqlTableType = InnoDB
 propel.disableIdentifierQuoting=true
 
 # For MySQL or Oracle, you also need to specify username & password 
-#propel.database.user = [db username]
-#propel.database.password = [db password]
+propel.database.user = root
+propel.database.password = francoismysql
 
 # Note that if you do not wish to specify the database (e.g. if you
 # are using multiple databses) you can use the @DB@ token which
