--- a/generator/default.properties
+++ b/generator/default.properties
@@ -28,7 +28,7 @@ propel.runOnlyOnSchemaChange = false
 # Default behavior settings
 #
 propel.targetPlatform = php5
-propel.packageObjectModel = true
+propel.packageObjectModel = false
 propel.useDateTimeClass = true
 propel.dateTimeClass = DateTime
 
