[1.5] Enabling generic accessors and mutators by default
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.5@1676 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -78,8 +78,8 @@ propel.addValidators = none
 #
 # -------------------------------------------------------------------
 
-propel.addGenericAccessors = false
-propel.addGenericMutators = false
+propel.addGenericAccessors = true
+propel.addGenericMutators = true
 propel.addSaveMethod = true
 propel.addTimeStamp = false
 propel.addValidateMethod = true
