[1.5] Fixed issue with single table inheritance and generated queries (closes #930)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.5@1701 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -206,6 +206,8 @@ propel.builder.objectmultiextend.class = builder.om.PHP5MultiExtendObjectBuilder
 propel.builder.tablemap.class = builder.om.PHP5TableMapBuilder
 propel.builder.query.class = builder.om.QueryBuilder
 propel.builder.querystub.class = builder.om.ExtensionQueryBuilder
+propel.builder.queryinheritance.class = builder.om.QueryInheritanceBuilder
+propel.builder.queryinheritancestub.class = builder.om.ExtensionQueryInheritanceBuilder
 
 propel.builder.interface.class = builder.om.PHP5InterfaceBuilder
 
