[1.5] Preparing the 1.5.0 stable release
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.5@1706 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -16,7 +16,7 @@
 #
 # -------------------------------------------------------------------
 
-propel.version = 1.5.0-dev
+propel.version = 1.5.0
 
 propel.home = .
 
