--- a/generator/default.properties
+++ b/generator/default.properties
@@ -16,7 +16,7 @@
 #
 # -------------------------------------------------------------------
 
-propel.version = 1.5.0
+propel.version = 1.5.1-dev
 
 propel.home = .
 
