--- a/test/fixtures/bookstore-packaged/build.properties
+++ b/test/fixtures/bookstore-packaged/build.properties
@@ -17,3 +17,4 @@ propel.database.url = sqlite://localhost/./test/@DB@.db
 
 propel.targetPackage = bookstore-packaged
 propel.packageObjectModel = true
+propel.schema.transform  = true
