[1.5] Added aggregate_column behavior (refs #995)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.5@1779 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -249,3 +249,4 @@ propel.behavior.sortable.class = behavior.sortable.SortableBehavior
 propel.behavior.sluggable.class = behavior.sluggable.SluggableBehavior
 propel.behavior.concrete_inheritance.class = behavior.concrete_inheritance.ConcreteInheritanceBehavior
 propel.behavior.query_cache.class = behavior.query_cache.QueryCacheBehavior
+propel.behavior.aggregate_column.class = behavior.aggregate_column.AggregateColumnBehavior
