--- a/generator/default.properties
+++ b/generator/default.properties
@@ -103,6 +103,9 @@ propel.defaultTimeStampFormat = Y-m-d H:i:s
 propel.defaultTimeFormat = %X
 propel.defaultDateFormat = %x
 
+propel.namespace.om = Om
+propel.namespace.map = Map
+
 propel.omtar.src.base = false
 propel.omtar.src.extension = false
 propel.omtar.bin.base = false
