--- a/generator/default.properties
+++ b/generator/default.properties
@@ -240,6 +240,17 @@ propel.reverse.parser.class = reverse.${propel.database}.${propel.database}Schem
 
 # -------------------------------------------------------------------
 #
+#  M Y S Q L   S P E C I F I C   S E T T I N G S
+#
+# -------------------------------------------------------------------
+
+# Default table type
+propel.mysqlTableType = MyISAM
+# Keyword used to specify table type. MYSQL < 5 should use TYPE instead
+propel.mysqlTableEngineKeyword = ENGINE
+
+# -------------------------------------------------------------------
+#
 #  B E H A V I O R   S E T T I N G S
 #
 # -------------------------------------------------------------------
