--- a/generator/default.properties
+++ b/generator/default.properties
@@ -16,7 +16,7 @@
 #
 # -------------------------------------------------------------------
 
-propel.version = 1.5.2-dev
+propel.version = 1.5.2
 
 propel.home = .
 
