[1.5][1.6] Fixed regression in SQL build (mysql.tableType build property was not used anymore)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.6@1815 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -245,9 +245,9 @@ propel.reverse.parser.class = reverse.${propel.database}.${propel.database}Schem
 # -------------------------------------------------------------------
 
 # Default table type
-propel.mysqlTableType = MyISAM
+propel.mysql.tableType = MyISAM
 # Keyword used to specify table type. MYSQL < 5 should use TYPE instead
-propel.mysqlTableEngineKeyword = ENGINE
+propel.mysql.tableEngineKeyword = ENGINE
 
 # -------------------------------------------------------------------
 #
