--- a/1.5/test/fixtures/namespaced/build.properties
+++ b/1.5/test/fixtures/namespaced/build.properties
@@ -12,13 +12,13 @@
 
 propel.project = bookstore_namespaced
 propel.database = mysql 
-propel.database.url = mysql:dbname=bookstoreNS
+propel.database.url = mysql:dbname=test
 propel.mysqlTableType = InnoDB
 propel.disableIdentifierQuoting=true
 
 # For MySQL or Oracle, you also need to specify username & password 
-propel.database.user = bookstore
-propel.database.password = EBzCuc77d47YS4FR
+#propel.database.user = [db username]
+#propel.database.password = [db password]
 
 # Note that if you do not wish to specify the database (e.g. if you
 # are using multiple databses) you can use the @DB@ token which
