[1.5][1.6] Fixed namespaced tests that were falling since r1815
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.6@1826 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/test/fixtures/namespaced/build.properties
+++ b/test/fixtures/namespaced/build.properties
@@ -13,7 +13,7 @@
 propel.project = bookstore_namespaced
 propel.database = mysql 
 propel.database.url = mysql:dbname=test
-propel.mysqlTableType = InnoDB
+propel.mysql.tableType = InnoDB
 propel.disableIdentifierQuoting=true
 
 # For MySQL or Oracle, you also need to specify username & password 
