--- a/1.5/test/fixtures/namespaced/build.properties
+++ b/1.5/test/fixtures/namespaced/build.properties
@@ -13,7 +13,7 @@
 propel.project = bookstore_namespaced
 propel.database = mysql 
 propel.database.url = mysql:dbname=test
-propel.mysqlTableType = InnoDB
+propel.mysql.tableType = InnoDB
 propel.disableIdentifierQuoting=true
 
 # For MySQL or Oracle, you also need to specify username & password 
