[1.5][1.6] Allowed behaviors to add classes (refs #1046)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.6@1839 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/test/fixtures/bookstore/build.properties
+++ b/test/fixtures/bookstore/build.properties
@@ -33,3 +33,4 @@ propel.targetPackage = bookstore
 # We need to test behavior hooks
 propel.behavior.test_all_hooks.class = ../test.tools.helpers.bookstore.behavior.Testallhooksbehavior
 propel.behavior.do_nothing.class = ../test.tools.helpers.bookstore.behavior.DonothingBehavior
+propel.behavior.add_class.class = ../test.tools.helpers.bookstore.behavior.AddClassBehavior
