[1.6] Added support for `buildtime-conf.xml`, to allow om and sql builders to use more than one connection at buildtime (refs #1079)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.6@1884 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -140,6 +140,8 @@ propel.runtime.phpconf.file = ${propel.project}-conf.php
 propel.runtime.phpconf-classmap.file = ${propel.project}-classmap.php
 propel.default.schema.basename = schema
 
+propel.buildtime.conf.file = buildtime-conf.xml
+
 # Can't use because of inconsistencies in where the files
 # are named (some from build-propel.xml, but some from within templates)
 # propel.default.data.basename = ${propel.project}-data
