--- a/test/fixtures/bookstore/build.properties
+++ b/test/fixtures/bookstore/build.properties
@@ -11,7 +11,7 @@
 # you cannot refer to any properties set therein.
 
 propel.project = bookstore
-propel.database = mysql 
+propel.database = oracle 
 propel.database.url = mysql:dbname=test
 propel.mysql.tableType = InnoDB
 
