[1.6] Replaced DDLBuilders by calls to platform::getAddTablesDDL() and removed DDLBuilders altogether (refs #1103)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.6@1972 a84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -89,9 +89,8 @@ propel.basePrefix = Base
 propel.saveException = PropelException
 propel.emulateForeignKeyConstraints = false
 
-# Identifier quoting is only implemented at the DDL layer at this point.
-# Since this may result in undesired behavior (especially in Postgres),
-# it can be disabled by setting this property to true in your build.properties file.
+# Identifier quoting may result in undesired behavior (especially in Postgres),
+# it can be disabled in DDL by setting this property to true in your build.properties file.
 propel.disableIdentifierQuoting = false
 
 # These are the default formats that will be used when fetching values
@@ -222,7 +221,6 @@ propel.builder.pluralizer.class = builder.util.DefaultEnglishPluralizer
 
 # SQL builders
 
-propel.builder.ddl.class = builder.sql.${propel.database}.${propel.database}DDLBuilder
 propel.builder.datasql.class = builder.sql.${propel.database}.${propel.database}DataSQLBuilder
 
 # Platform classes
