--- a/generator/build.xml
+++ b/generator/build.xml
@@ -168,6 +168,10 @@
 	<phing phingfile="build-propel.xml" target="sql"/>
 </target>
 
+<target name="sql-diff" depends="configure">
+	<phing phingfile="build-propel.xml" target="sql-diff"/>
+</target>
+
 <target name="old-sql" depends="configure">
 	<phing phingfile="build-propel.xml" target="old-sql"/>
 </target>
