[1.6] Advances in the migration tasks (refs #1123):  - sql-diff task now generates a migration class  - migration-status task lists the migrations to execute
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.6@1993 a84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -122,6 +122,7 @@ propel.output.dir = ${propel.project.dir}/build
 propel.php.dir = ${propel.output.dir}/classes
 propel.phpconf.dir = ${propel.output.dir}/conf
 propel.sql.dir = ${propel.output.dir}/sql
+propel.migration.dir = ${propel.output.dir}/migrations
 
 propel.graph.dir = ${propel.output.dir}/graph
 
@@ -186,6 +187,14 @@ propel.datadtd.mapper.to = *.dtd
 propel.sql.mapper.from = *.xml
 propel.sql.mapper.to = *.sql
 
+# -------------------------------------------------------------------
+#
+#  M I G R A T I O N    S E T T I N G S
+#
+# -------------------------------------------------------------------
+
+propel.migration.editor = 
+propel.migration.table = propel_migration
 
 # -------------------------------------------------------------------
 #
