--- a/generator/build.xml
+++ b/generator/build.xml
@@ -172,6 +172,10 @@
 	<phing phingfile="build-propel.xml" target="sql-diff"/>
 </target>
 
+<target name="migration-status" depends="configure">
+	<phing phingfile="build-propel.xml" target="migration-status"/>
+</target>
+
 <target name="old-sql" depends="configure">
 	<phing phingfile="build-propel.xml" target="old-sql"/>
 </target>
