--- a/generator/build.xml
+++ b/generator/build.xml
@@ -176,6 +176,10 @@
 	<phing phingfile="build-propel.xml" target="migration-status"/>
 </target>
 
+<target name="migration-up" depends="configure">
+	<phing phingfile="build-propel.xml" target="migration-up"/>
+</target>
+
 <target name="old-sql" depends="configure">
 	<phing phingfile="build-propel.xml" target="old-sql"/>
 </target>
