--- a/generator/build.xml
+++ b/generator/build.xml
@@ -180,6 +180,10 @@
 	<phing phingfile="build-propel.xml" target="migration-up"/>
 </target>
 
+<target name="migration-down" depends="configure">
+	<phing phingfile="build-propel.xml" target="migration-down"/>
+</target>
+
 <target name="old-sql" depends="configure">
 	<phing phingfile="build-propel.xml" target="old-sql"/>
 </target>
