--- a/generator/build.xml
+++ b/generator/build.xml
@@ -172,17 +172,25 @@
 	<phing phingfile="build-propel.xml" target="sql-diff"/>
 </target>
 
+<target name="diff" depends="sql-diff" />
+
 <target name="migration-status" depends="configure">
 	<phing phingfile="build-propel.xml" target="migration-status"/>
 </target>
+
+<target name="status" depends="migration-status" />
 
 <target name="migration-up" depends="configure">
 	<phing phingfile="build-propel.xml" target="migration-up"/>
 </target>
 
+<target name="migrate-up" depends="migration-up" />
+
 <target name="migration-down" depends="configure">
 	<phing phingfile="build-propel.xml" target="migration-down"/>
 </target>
+
+<target name="migrate-down" depends="migration-down" />
 
 <target name="old-sql" depends="configure">
 	<phing phingfile="build-propel.xml" target="old-sql"/>
