[1.6] added the migrate task (refs #1123)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.6@2000 a84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/build.xml
+++ b/generator/build.xml
@@ -192,6 +192,12 @@
 
 <target name="migrate-down" depends="migration-down" />
 
+<target name="migration" depends="configure">
+	<phing phingfile="build-propel.xml" target="migration"/>
+</target>
+
+<target name="migrate" depends="migration" />
+
 <target name="old-sql" depends="configure">
 	<phing phingfile="build-propel.xml" target="old-sql"/>
 </target>
