[1.6] Tweaked and refectored migration tasks for better output (refs #1123)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.6@2001 a84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/build.xml
+++ b/generator/build.xml
@@ -186,11 +186,15 @@
 
 <target name="migrate-up" depends="migration-up" />
 
+<target name="up" depends="migration-up" />
+
 <target name="migration-down" depends="configure">
 	<phing phingfile="build-propel.xml" target="migration-down"/>
 </target>
 
 <target name="migrate-down" depends="migration-down" />
+
+<target name="down" depends="migration-down" />
 
 <target name="migration" depends="configure">
 	<phing phingfile="build-propel.xml" target="migration"/>
