[1.6] Made sql diff case insensitive by default (refs #1123)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.6@2004 a84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -195,6 +195,7 @@ propel.sql.mapper.to = *.sql
 
 propel.migration.editor = 
 propel.migration.table = propel_migration
+propel.migration.caseInsensitive = true
 
 # -------------------------------------------------------------------
 #
