[1.6] Added support for database schemas (patch by fonsinchen) (refs #940)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.6@2090 a84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -35,6 +35,10 @@ propel.dateTimeClass = DateTime
 propel.schema.validate = true
 propel.schema.transform  = false
 
+propel.schema.autoPackage = false
+propel.schema.autoNamespace = false
+propel.schema.autoPrefix = false
+
 # controls what type of joins will be used in the doSelectJoin*() peer methods, 
 # if set to true, LEFT JOINS will be used, INNER JOINS otherwise
 # see ticket #491, #588
