--- a/test/fixtures/bookstore/build.properties
+++ b/test/fixtures/bookstore/build.properties
@@ -15,6 +15,7 @@ propel.database = mysql
 propel.database.url = mysql:dbname=test
 propel.mysql.tableType = InnoDB
 propel.disableIdentifierQuoting = true 
+propel.schema.autoPrefix = true
 
 # For MySQL or Oracle, you also need to specify username & password 
 #propel.database.user = [db username]
