--- a/generator/default.properties
+++ b/generator/default.properties
@@ -272,3 +272,4 @@ propel.behavior.sluggable.class = behavior.sluggable.SluggableBehavior
 propel.behavior.concrete_inheritance.class = behavior.concrete_inheritance.ConcreteInheritanceBehavior
 propel.behavior.query_cache.class = behavior.query_cache.QueryCacheBehavior
 propel.behavior.aggregate_column.class = behavior.aggregate_column.AggregateColumnBehavior
+propel.behavior.versionable.class = behavior.versionable.VersionableBehavior
