--- a/generator/default.properties
+++ b/generator/default.properties
@@ -16,7 +16,7 @@
 #
 # -------------------------------------------------------------------
 
-propel.version = 1.5.6
+propel.version = 1.5.7-dev
 
 propel.home = .
 
